# compiler

./: .gitignore  SpicyAST  compiler.cabal  grammar.spicy  hie.yaml
app/: Main.hs
src/: Test.hs  Utils.hs
src/AST/: AST.hs  BinOp.hs  Expr.hs  Function.hs  Literal.hs  Member.hs  Module.hs  Pattern.hs  Statement.hs  Struct.hs  Type.hs  Var.hs
src/AST/Function/: Body.hs  Decl.hs
src/AST/Internal/: Parsable.hs
src/Lexer/: Lexer.hs
src/Parser/: Parser.hs
src/SAST/: Expr.hs  Literal.hs  Module.hs  Type.hs  Var.hs
src/Semant/: Checkable.hs  Semant.hs
