cabal-version:      2.4
name:               compiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Яковлев Георгий
maintainer:         darksmolensksky@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
    build-depends:
        , base
        , text
        , megaparsec
        , string-conversions
        , parser-combinators
        -- Main pretty-printer
        , prettyprinter
        -- for raw AST indentation
        , pretty-simple
        , unordered-containers
        , hashable

    ghc-options: -Wall -Werror -fno-warn-missing-signatures -threaded -fno-warn-unused-imports
    default-extensions:
        AllowAmbiguousTypes
        ApplicativeDo
        BlockArguments
        ConstraintKinds
        DataKinds
        DeriveAnyClass
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        DerivingStrategies
        DerivingVia
        DisambiguateRecordFields
        DuplicateRecordFields
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        OverloadedRecordDot
        PatternSynonyms
        RankNTypes
        RebindableSyntax
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        ViewPatterns
        QuasiQuotes

executable compiler
    import: deps
    main-is: Main.hs

    build-depends: compiler
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -haddock

library
    import:           deps
    hs-source-dirs:   src
    exposed-modules:
        AST.AST
        Lexer.Lexer
        Parser.Parser
        Utils
    other-modules:
        AST.Expr
        AST.Literal
        AST.BinOp
        AST.Statement
        AST.Function.Decl
        AST.Function.Body
        AST.Function
        AST.Pattern
        AST.Type
        AST.Member
        AST.Struct
        AST.Var
        AST.Module
        SAST.Module
        SAST.Expr
        SAST.Type
        AST.Internal.Parsable
    default-language: GHC2021